--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   provider: ^6.0.2
   http: ^0.13.4
   change_app_package_name: ^0.1.2
+  cloud_firestore: ^1.0.4
+  firebase_auth: ^1.1.4
+  firebase_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
